--- a/New_page.html
+++ b/New_page.html
@@ -42,5 +42,12 @@
 		</section>
 	</main>
 </body>
+<footer>
+	<ul>
+		<li>Facebook</li>
+		<li>Instagram</li>
+		<li>Twitter</li>
+	</ul>
+</footer>
 </html>
 
