--- a/New_page.html
+++ b/New_page.html
@@ -10,7 +10,16 @@
 
 	body {
 	font-family: verdana;
-	font color: blue 
+	color: black;
+	} 
+	
+	footer {
+	font-style: italic;
+	background-color: aqua;
+	font-family: times new romance;
+	}
+
+	
 	</style>
 
 	<title>FrutyApp</title>
@@ -43,11 +52,11 @@
 	</main>
 </body>
 <footer>
-	<ul>
-		<li>Facebook</li>
-		<li>Instagram</li>
-		<li>Twitter</li>
-	</ul>
+		<center>
+			<li>Facebook</li>
+			<li>Instagram</li>
+			<li>Twitter</li>
+		<center>
 </footer>
 </html>
 
