Adding style with class type

--- a/New_page.html
+++ b/New_page.html
@@ -12,7 +12,15 @@
 	font-family: verdana;
 	color: black;
 	} 
-	
+	.Andrés {
+	color: brown;
+	font-size: 80;
+	Font-family: arial;
+	}
+
+	table {
+	border-color: brown;
+	}
 	footer {
 	font-style: italic;
 	background-color: aqua;
@@ -50,6 +58,18 @@
 			<p>Con nosotros tendrás acceso a la información y precios, mucho más rápido.<p>
 		</section>
 	</main>
+	
+	<h3 class="Andrés">Localidades</h3>
+		<table border="1">
+			<tr>
+				<td>Riomar</td>
+				<td>Suroccidente</td>
+				<td>Centro-Histórico</td>
+				<td>Suroriente</td>
+				<td>Metropolitana</td>
+			</tr>
+		</table>
+
 </body>
 <footer>
 		<center>
