adding box model

--- a/New_page.html
+++ b/New_page.html
@@ -5,7 +5,7 @@
 	<style>
 	header {
 	background-color: #a8b8c7;
-        font-family: verdana;
+                font-family: arial;
 	}
 
 	body {
@@ -15,7 +15,7 @@
 	.Andrés {
 	color: brown;
 	font-size: 80;
-	Font-family: arial;
+	font-family: arial;
 	}
 
 	table {
@@ -26,7 +26,13 @@
 	background-color: aqua;
 	font-family: times new romance;
 	}
-
+	#second {
+	color: brown ;
+	font-style: bold;
+	background-color: #b2fda5;
+	width: 300px;
+	heitgh: 250px;
+	}
 	
 	</style>
 
@@ -69,6 +75,24 @@
 				<td>Metropolitana</td>
 			</tr>
 		</table>
+	<section id="second">
+		<h1>Nuestros productos<h1>
+		<div>Verduras</div>
+		<ul>
+			<li>Tomates</li>
+			<li>Cebollas</li>
+			<li>Pimenton</li>
+		</ul>
+
+		<div>Frutas</div>
+		<ul>
+			<li>Mangos</li>
+			<li>Fresas</li>
+			<li>Moras</li>
+		</ul>	
+
+	</section>
+			
 
 </body>
 <footer>
